// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot with blank recipeList 1`] = `
<DocumentFragment>
  <div
    class="RecipeList d-flex flex-column"
  >
    <div
      class="RecipeList-container"
    >
      <button
        class="general-btn-red"
      >
        Go Back
      </button>
      <button
        class="general-btn-red"
      >
        Go Back
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`matches snapshot with filled recipeList 1`] = `
<DocumentFragment>
  <div
    class="RecipeList d-flex flex-column"
  >
    <div
      class="RecipeList-container"
    >
      <button
        class="general-btn-red"
      >
        Go Back
      </button>
      <div
        class="row"
      >
        <div
          class="Recipe col-12"
        >
          <a
            class="RecipeList-para"
            href="/recipes/1234"
          >
            <b>
              Scrambled Eggs
            </b>
          </a>
          <p>
            Uses 2 of your ingredients ( eggs, otherIngredient )
          </p>
          <img
            alt="Picture of the recipe Scrambled Eggs"
            class="Recipe-img"
            src="https://spoonacular.com/recipeImages/716426-312x231.jpg"
          />
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="Recipe col-12"
        >
          <a
            class="RecipeList-para"
            href="/recipes/5678"
          >
            <b>
              BLT
            </b>
          </a>
          <p>
            Uses 3 of your ingredients ( bacon, lettuce, tomato )
          </p>
          <img
            alt="Picture of the recipe BLT"
            class="Recipe-img"
            src="https://spoonacular.com/recipeImages/716426-312x231.jpg"
          />
        </div>
      </div>
      <button
        class="general-btn-red"
      >
        Go Back
      </button>
    </div>
  </div>
</DocumentFragment>
`;
